Fix spacing issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,3 +61,7 @@ h4 {
 .profile-pic {
   padding-bottom: 40px;
 }
+
+.header-name {
+  padding-top: 40px;
+}
